crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_spawn-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        SpawnBlock(
            Block {
                items: [
                    GetVar {
                        name: "a",
                    },
                ],
                last: None,
            },
        ),
    ),
    [],
)
