crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_spawn-5.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
SpawnCall(
    Call {
        opt: false,
        target: GetVar {
            name: "f",
        },
        args: [],
    },
)
