crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_spawn-6.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    SpawnCall(
        Call {
            opt: false,
            target: GetVar {
                name: "f",
            },
            args: [
                GetVar {
                    name: "a",
                },
                GetVar {
                    name: "b",
                },
                GetVar {
                    name: "c",
                },
            ],
        },
    ),
)
