crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_spawn.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
SpawnBlock(
    Block {
        items: [],
        last: None,
    },
)
