crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_try-10.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        Try {
            body: Block {
                items: [
                    GetVar {
                        name: "a",
                    },
                ],
                last: Some(
                    GetVar {
                        name: "b",
                    },
                ),
            },
            catch: (
                "e",
                Block {
                    items: [
                        GetVar {
                            name: "e",
                        },
                    ],
                    last: None,
                },
            ),
        },
    ),
    [],
)
